--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
     "name": "@frooplexp/dynaload",
-    "version": "1.0.0",
+    "version": "1.1.10",
     "description": "Dynamic loading for UI client",
-    "main": "dist/dynaload.js",
-    "types": "dist",
+    "main": "dist/index.min.js",
+    "types": "dist/index.d.ts",
     "files": [
-        "./dist"
+        "dist"
     ],
-    "type": "module",
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com"
+    },
     "author": "Connor D. Edwards <connor@frooplexp.com>",
     "license": "MIT",
-    "private": true,
+    "private": false,
     "scripts": {
         "start:dev": "serve .",
         "build:watch": "NODE_ENV=development webpack --watch",
